--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <!-- Load AstroChart Library -->
   <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js" defer></script>
 
-  <!-- Include Required CSS -->
-  <link rel="stylesheet" href="https://tsarinaha.github.io/Hakaya/dist/project/src/theme.css">
+  <!-- Include Animation Styles (if available) -->
   <link rel="stylesheet" href="https://tsarinaha.github.io/Hakaya/dist/project/src/animation/animationStyles.css">
 
   <style>
@@ -24,112 +23,25 @@
       color: #333;
     }
 
-    form {
-      margin: 20px 0;
-    }
-
-    input, button {
-      padding: 10px;
-      margin: 10px 0;
-      width: 300px;
-      max-width: 90%;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    button {
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-      border: none;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
     #chart-container {
       margin: 20px auto;
       width: 600px;
       height: 600px;
-      border: 1px solid #ccc; /* For debugging visibility */
+      border: 1px solid #ccc; /* Debugging visibility */
     }
   </style>
 </head>
 <body>
   <h1>Your Natal Chart</h1>
-
-  <!-- Form to Input Birth Details -->
-  <form id="natal-chart-form">
-    <input type="text" id="name" placeholder="Enter your name" required>
-    <input type="date" id="birth_date" required>
-    <input type="time" id="birth_time" required>
-    <input type="text" id="location" placeholder="Enter your birth location" required>
-    <button type="submit">Generate Chart</button>
-  </form>
-
-  <!-- Container for Chart -->
   <div id="chart-container"></div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      // Ensure astrochart is loaded
       if (typeof window.astrochart === "undefined") {
-        console.error("astrochart is not defined. Ensure the library is loaded correctly.");
+        console.error("astrochart is not defined.");
         return;
       }
-
       console.log("astrochart loaded successfully.");
-
-      // Handle form submission
-      const form = document.getElementById('natal-chart-form');
-      form.addEventListener('submit', async function (e) {
-        e.preventDefault();
-
-        const requestData = {
-          name: document.getElementById('name').value,
-          birth_date: document.getElementById('birth_date').value,
-          birth_time: document.getElementById('birth_time').value,
-          location: document.getElementById('location').value,
-        };
-
-        try {
-          const response = await fetch('https://astrologychartapi.onrender.com/calculate_chart/', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(requestData),
-          });
-
-          const data = await response.json();
-
-          if (data.error) {
-            alert(`Error: ${data.error}`);
-            return;
-          }
-
-          console.log("Data received from API:", data);
-
-          // Render the chart
-          const chart = new astrochart.Chart('chart-container', 600, 600, {
-            planets: data.planets.map((planet) => ({
-              name: planet.name,
-              longitude: planet.longitude,
-              retrograde: planet.retrograde || false,
-            })),
-            houses: data.cusps,
-            theme: {
-              planet: { color: 'blue' },
-              house: { borderColor: 'gray' },
-              aspect: { lineColor: 'red' },
-            },
-          });
-
-          chart.radix();
-          console.log("Chart rendered successfully.");
-        } catch (error) {
-          console.error("Error fetching or rendering chart:", error.message);
-        }
-      });
     });
   </script>
 </body>
