--- a/index.html
+++ b/index.html
@@ -4,44 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Natal Chart App</title>
-
-  <!-- Load AstroChart Library -->
   <script src="https://tsarinaha.github.io/Hakaya/dist/astrochart.js" defer></script>
-
-  <!-- Include Animation Styles (if available) -->
-  <link rel="stylesheet" href="https://tsarinaha.github.io/Hakaya/dist/project/src/animation/animationStyles.css">
-
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #f4f4f9;
       padding: 20px;
     }
-
-    h1 {
-      color: #333;
-    }
-
     #chart-container {
       margin: 20px auto;
       width: 600px;
       height: 600px;
-      border: 1px solid #ccc; /* Debugging visibility */
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
   <h1>Your Natal Chart</h1>
+
+  <!-- User Input Form -->
+  <form id="natal-chart-form">
+    <input type="text" id="name" placeholder="Enter your name" required>
+    <input type="date" id="birth_date" required>
+    <input type="time" id="birth_time" required>
+    <input type="text" id="location" placeholder="Enter your birth location" required>
+    <button type="submit">Generate Chart</button>
+  </form>
+
   <div id="chart-container"></div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      if (typeof window.astrochart === "undefined") {
-        console.error("astrochart is not defined.");
-        return;
-      }
-      console.log("astrochart loaded successfully.");
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('natal-chart-form');
+
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        const requestData = {
+          name: document.getElementById('name').value,
+          birth_date: document.getElementById('birth_date').value,
+          birth_time: document.getElementById('birth_time').value,
+          location: document.getElementById('location').value,
+        };
+
+        try {
+          const response = await fetch('https://astrologychartapi.onrender.com/calculate_chart/', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(requestData),
+          });
+
+          const data = await response.json();
+          console.log("API Response:", data);
+
+          if (data.error) {
+            alert(`Error: ${data.error}`);
+            return;
+          }
+
+          // Initialize and render the chart
+          const chart = new astrochart.Chart('chart-container', 600, 600, {
+            planets: data.planets,
+            houses: data.houses,
+            theme: {
+              planet: { color: 'blue' },
+              house: { borderColor: 'gray' },
+              aspect: { lineColor: 'red' },
+            },
+          });
+
+          chart.radix();
+        } catch (err) {
+          console.error("Error fetching or rendering chart:", err.message);
+        }
+      });
     });
   </script>
 </body>
