--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const form = document.getElementById('natal-chart-form');
+      let data; // Declare data globally for debugging if needed
 
       form.addEventListener('submit', async function (e) {
         e.preventDefault();
+
         const requestData = {
           name: document.getElementById('name').value,
           birth_date: document.getElementById('birth_date').value,
@@ -43,25 +45,30 @@
         };
 
         try {
+          // Fetch data from the API
           const response = await fetch('https://astrologychartapi.onrender.com/calculate_chart/', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(requestData),
           });
 
-          const data = await response.json();
-          console.log("API Response:", data);
+          data = await response.json();
+          console.log('API Response:', data);
 
           if (data.error) {
             alert(`Error: ${data.error}`);
             return;
           }
 
-          // Initialize and render the chart
+          // Ensure API data is structured correctly
+          console.log('Planets:', data.planets);
+          console.log('Houses:', data.cusps);
+
+          // Render the chart
           const chart = new astrochart.Chart('chart-container', 600, 600);
           chart.radix({
             planets: data.planets,
-            houses: data.houses,
+            houses: data.cusps,
             theme: {
               planet: { color: 'blue' },
               house: { borderColor: 'gray' },
@@ -69,9 +76,33 @@
             },
           });
         } catch (err) {
-          console.error("Error fetching or rendering chart:", err.message);
+          console.error('Error fetching or rendering chart:', err.message);
         }
       });
+
+      // Optional: Static data for testing
+      // Uncomment this block to test rendering without the API
+      /*
+      const staticData = {
+        planets: [
+          { name: 'Sun', degree: 120 },
+          { name: 'Moon', degree: 90 },
+          { name: 'Mercury', degree: 45 },
+        ],
+        cusps: [0, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330],
+      };
+
+      const staticChart = new astrochart.Chart('chart-container', 600, 600);
+      staticChart.radix({
+        planets: staticData.planets,
+        houses: staticData.cusps,
+        theme: {
+          planet: { color: 'blue' },
+          house: { borderColor: 'gray' },
+          aspect: { lineColor: 'red' },
+        },
+      });
+      */
     });
   </script>
 </body>
