--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrology Chart</title>
-    <script src="path/to/astrochart.min.js"></script>
+    <script src="https://github.com/tsarinaha/Hakaya/blob/main/dist/astrochart.js"></script>
 </head>
 <body>
     <h1>Astrology Chart</h1>
