--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrology Chart</title>
-    <script src="https://github.com/tsarinaha/Hakaya/blob/main/dist/astrochart.js"></script>
+    <title>Radix Chart Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/astrochart@latest/dist/astrochart.min.js"></script>
+    <style>
+        #chartContainer {
+            width: 800px;
+            height: 800px;
+            margin: 0 auto;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Astrology Chart</h1>
+    <h1>Astrology Radix Chart</h1>
     <div id="chartContainer"></div>
     <script>
+        // Initialize the chart on page load
         window.onload = function() {
-            var chart = new astrology.Chart('chartContainer', 800, 800);
+            const chart = new astrology.Chart('chartContainer', 800, 800);
             chart.radix({
                 planets: {
                     Sun: [0],
@@ -22,7 +31,7 @@
                     Jupiter: [150],
                     Saturn: [180],
                 },
-                cusps: [300, 340, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300]
+                cusps: [300, 340, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300],
             });
         };
     </script>
