--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radix Chart Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/astrochart@latest/dist/astrochart.min.js"></script>
+    <title>AstroChart Example</title>
+    <script src="dist/astrochart.js"></script> <!-- Ensure this path is correct -->
     <style>
         #chartContainer {
             width: 800px;
             height: 800px;
-            margin: 0 auto;
             border: 1px solid black;
+            margin: 20px auto;
         }
     </style>
 </head>
 <body>
-    <h1>Astrology Radix Chart</h1>
+    <h1>Astrology Chart</h1>
     <div id="chartContainer"></div>
     <script>
-        // Initialize the chart on page load
-        window.onload = function() {
+        window.onload = function () {
             const chart = new astrology.Chart('chartContainer', 800, 800);
             chart.radix({
                 planets: {
