--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Astrology Chart with Static Data</title>
-  <script src="https://unpkg.com/@astrodraw/astrochart"></script>
-  <style>
-    #chartContainer {
-      width: 800px;
-      height: 800px;
-      margin: auto;
-      border: 1px solid black;
-    }
-    h1 {
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Astrology Chart with Debugging</title>
+    <script src="https://unpkg.com/@astrodraw/astrochart"></script>
+    <style>
+        #chartContainer {
+            width: 800px;
+            height: 800px;
+            border: 1px solid black;
+            margin: auto;
+        }
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-  <h1>Astrology Chart</h1>
-  <div id="chartContainer"></div>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const staticData = {
-        planets: {
-          Sun: [15],       // 15° Aries
-          Moon: [45],      // 15° Taurus
-          Mercury: [75],   // 15° Gemini
-          Venus: [105],    // 15° Cancer
-          Mars: [135],     // 15° Leo
-          Jupiter: [165],  // 15° Virgo
-          Saturn: [195],   // 15° Libra
-          Uranus: [225],   // 15° Scorpio
-          Neptune: [255],  // 15° Sagittarius
-          Pluto: [285],    // 15° Capricorn
-        },
-        cusps: [0, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330],
-        aspects: [
-          { from: "Sun", to: "Moon", type: "sextile" },   // 60° aspect
-          { from: "Sun", to: "Mars", type: "trine" },    // 120° aspect
-          { from: "Venus", to: "Saturn", type: "square" }, // 90° aspect
-          { from: "Jupiter", to: "Neptune", type: "opposition" }, // 180° aspect
-          { from: "Mercury", to: "Uranus", type: "trine" }, // 120° aspect
-        ],
-      };
+    <h1>Astrology Chart</h1>
+    <div id="chartContainer"></div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const staticData = {
+                planets: {
+                    Sun: [15],
+                    Moon: [45],
+                    Mercury: [75],
+                    Venus: [105],
+                    Mars: [135],
+                    Jupiter: [165],
+                    Saturn: [195],
+                    Uranus: [225],
+                    Neptune: [255],
+                    Pluto: [285],
+                },
+                cusps: [0, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330],
+                aspects: [
+                    { from: "Sun", to: "Moon", type: "sextile" },
+                    { from: "Sun", to: "Mars", type: "trine" },
+                    { from: "Venus", to: "Saturn", type: "square" },
+                ],
+            };
 
-      // Initialize the chart
-      const chart = new astrochart.Chart("chartContainer", 800, 800);
+            console.log("Static Data:", staticData);
 
-      // Render the radix chart with static data
-      chart.radix(staticData);
+            const chart = new astrochart.Chart("chartContainer", 800, 800);
 
-      console.log("Chart rendered successfully!");
-    });
-  </script>
+            // Render chart
+            try {
+                chart.radix(staticData);
+                console.log("Chart rendered successfully!");
+            } catch (error) {
+                console.error("Error rendering chart:", error);
+            }
+        });
+    </script>
 </body>
 </html>
